Feature/iia 769 update readme for komet (#65)
* Updated documentation.

* Included code review suggestions.